[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-connect"
description = "Module for running commands on remote machine."
requires-python = ">=3.10, <3.14"
version = "7.13.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-connect"
Issues = "https://github.com/intel/mfd-connect/issues"
Changelog = "https://github.com/intel/mfd-connect/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]